# kos

./: README.md
KOS/: CMakeLists.txt  result.txt
KOS/changestate/: CMakeLists.txt
KOS/changestate/src/: changestate.cpp
KOS/einit/: CMakeLists.txt
KOS/einit/src/: init.yaml.in
KOS/resources/cdl/: Setcommand.cdl
KOS/resources/edl/: Changestate.edl
KOS/showapp/src/: showapp.cpp
KOS/subscriber/: CMakeLists.txt
KOS/subscriber/src/: main.cpp  subscriber.cpp
kosqueue/: debug_str.h  main.cpp  queue.h
